modificaciones de diseño

--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="shortcut icon" type="image/png" href="./assets/icons/icons8-lectura-unicornio-100.png"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Aladin&family=Flavors&family=Varela+Round&display=swap" rel="stylesheet">
-  <title>DevCamp React Starter</title>
+  <link href="https://fonts.googleapis.com/css2?family=Aladin&family=Flavors&family=Varela+Round&display=swap&family=Balsamiq+Sans&display=swap" rel="stylesheet">
+
+  <title>Funny Books</title>
 </head>
 
 <body>
